[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/ECM/Entity.gd" type="Script" id=1]
[ext_resource path="res://addons/ECM/Component.gd" type="Script" id=2]
[ext_resource path="res://addons/ECM/icons/Component.png" type="Texture" id=3]
[ext_resource path="res://addons/ECM/icons/Entity.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/FX/sfx_coin_cluster3.wav" type="AudioStream" id=5]
[ext_resource path="res://combat/traits/Strategic.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/environments/crown_halo.png" type="Texture" id=8]
[ext_resource path="res://utils/Shadow.tscn" type="PackedScene" id=9]
[ext_resource path="res://combat/collectables/HalfDiamond.gd" type="Script" id=10]
[ext_resource path="res://assets/animations/AppearFuhfuhfuh.tres" type="Animation" id=11]
[ext_resource path="res://actors/environments/BigDiamondCollectParticles.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sprites/environments/diamond_half_left.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/environments/diamond_half_right.png" type="Texture" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 90.0

[sub_resource type="Animation" id=2]
resource_name = "Blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0.5, 1.3, 2 ),
"transitions": PoolRealArray( 0.5, 2, 1, 0.5 ),
"update": 0,
"values": [ Color( 1, 0.956863, 0.305882, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HalfDiamond" type="RigidBody2D" groups=["Diamond", "Foreground", "in_camera"]]
collision_layer = 2048
collision_mask = 3092
linear_damp = 1.0
script = ExtResource( 10 )
left_texture = ExtResource( 13 )
right_texture = ExtResource( 14 )

[node name="Strategic" parent="." instance=ExtResource( 7 )]

[node name="Entity" type="Node" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}

[node name="Collectable" type="Node" parent="Entity"]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}

[node name="Shadow" parent="." instance=ExtResource( 9 )]
sprite = NodePath("../Sprite")

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 7 )

[node name="SpriteEffect" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 7 )
scale = Vector2( 5, 5 )

[node name="SpriteEffect2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 7 )

[node name="SpriteEffect3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Glow" type="Node2D" parent="."]
visible = false
scale = Vector2( 1.3, 1.3 )

[node name="Sprite" type="Sprite" parent="Glow"]
modulate = Color( 1, 0.970044, 0.517974, 0 )
self_modulate = Color( 0.635294, 0.305882, 1, 0.298039 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Glow"]
playback_speed = 2.0
anims/Blink = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AppearFuhfuhfuh = ExtResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -1.0
bus = "SFX_effect"

[node name="Particles" parent="." instance=ExtResource( 12 )]
